--- a/index.html
+++ b/index.html
@@ -109,5 +109,75 @@
         </div>
       </form>
     </section>
+     <footer>
+      <div class="container">
+        <div class="footer-grid">
+          <div class="map-block">
+            <h2>კონტაქტი</h2>
+            <p class="p-none">
+              Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+              იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა
+              ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+            </p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190570.9834559701!2d44.64195485438455!3d41.72760440571412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd7e64f626b%3A0x61d084ede2576ea3!2sTbilisi!5e0!3m2!1sen!2sge!4v1729615567552!5m2!1sen!2sge"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="form-class">
+            <form action="text">
+              <input type="text" placeholder="სახელი გავრი" name="user-name" />
+
+              <input
+                id="email"
+                name="email"
+                type="email"
+                placeholder="example@gmail.com"
+                required
+              />
+              <input
+                type="tel"
+                name="phone"
+                id="phone"
+                placeholder="123-456-789"
+              />
+              <textarea name="message" placeholder="enter message"></textarea>
+              <div class="button-parent submit">
+                <button type="submit">გაგზავნა</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="box2 item3">
+          <div class="phone logo">
+            <img src="img/phone.png" alt="phone" />
+          </div>
+          <a href="tel:+995 555 444 333">+995 555 444 333</a>
+          <div class="gmail img">
+            <img src="img/gmail.png" alt="gmail" />
+          </div>
+          <a href="mailto:someone@example.com">example@gmail.com</a>
+        </div>
+        </div>
+        <div class="box4 item4 container">
+            <h3>ყველა უფლება დაცულია</h3>
+            <article class="art">
+              <p>დამზადებულია</p>
+              <img src="img/guli.png" alt="guli" />
+              <p>-ით</p>
+              <img src="img/bolo-logo.png" alt="logo" />
+            </article>
+          </div>
+          <div class="bolo">
+            <h4>ყველა უფლება დაცულია</h4>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
 </body>
 </html>
